# HPCHomework

./: .gitignore  CMakeLists.txt  README  async-send-recv.cpp  bcast.c  bcast.cpp  build-all  calculate-pi-openmp.cpp  calculate-pi.cpp  example-of-deadlock.cpp  first-mpi-program.cpp  hello-world-openmp.cpp  jacobi-iteration.cpp  link-here  mat-mul-mat.cpp  mat-mul-vec.cpp  mpcxxrunner  mpi-allgather.cpp  mpi-allgatherv.cpp  mpi-allreduce.cpp  mpi-alltoall.cpp  mpi-barrier-example.cpp  mpi-barrier.c  mpi-cancel.cpp  mpi-gather.cpp  mpi-gatherv.cpp  mpi-iprobe.cpp  mpi-probe.cpp  mpi-reduce-custom-op.cpp  mpi-scan.cpp  mpi-scatter.cpp  mpi-scatterv.cpp  mpi.template.cpp  mpicrunner  mpicxxrunner  n-send-and-recv.c  null-proc.cpp  omp-atomic-alt.cpp  omp-barrier.cpp  omp-basic-parallel-api.cpp  (+26 more)
